--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/42e7622acd.js" crossorigin="anonymous"></script>
 	</head>
+
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -21,14 +23,15 @@
 					<header id="header">
 						<div class="logo">
 							<span class="icon_profile">
-								<img src="./images/wllm.jpeg" alt="profile" width="86" height="auto">
+								<img src="./images/wllm.jpeg" alt="profile" width="100%" height="auto">
 
 							</span>
 						</div>
 						<div class="content">
 							<div class="inner">
+								<p>Hello, my name is</p>
 								<h1>William Leung</h1>
-								<p>Software Engineer</p>
+								<p>Software Engineer 🌵 </p>
 							</div>
 						</div>
 						<nav>
@@ -48,9 +51,13 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/about/intro.jpg" alt="" /></span>
+								<p>Hello,</p>
+								<p>I am a Software Engineer based in San Francisco, Bay Area with a strong growth mindset and passion for learning new languages, frameworks, and technologies. My skills includes but not limited to JavaScript, React, Redux, and Ruby on Rails!</p>
+								<p>In 2016, I graduated from UC Davis which led me to work in finance for two amazing SaaS company. In those 4 year, I did not stop learning. I continued to grow myself personally and professionally and eventually grew a passion for web development! From a simple shopping list to a real-time video and messaging app, my project represents my growth and continued enjoyment for the field.</p>
+								<p>Please feel free to connect with me if you want to talk about code 🤓  or maybe even your favorite travel spot! I'm always interested to meet people with similar or different background! 😄</p>
+								<p>Thanks for reading!</p>
+
 							</article>
 
 						<!-- Work -->
@@ -64,14 +71,14 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/about/about.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<!-- <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -90,12 +97,14 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form> -->
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/william-leung-60589a73/" class="fab fa-linkedin-in"></a></li>
+									<!-- <li><a href="#" class="icon brands far fa-envelope"><span class="label">Instagram</span></a></li> -->
+									<li><a href="mailto:w.leung.93@gmail.com" class="fas fa-envelope"></a></li>
+									<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+									<li><a href="https://angel.co/u/william-leung-93" class="fab fa-angellist"></a></li>
+									<li><a href="https://github.com/1071919wl" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
