--- a/index.html
+++ b/index.html
@@ -63,7 +63,20 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main test">
+									<!-- <img src="images/pic02.jpg" alt="" /> -->
+									<div class='photobanner'>
+										<img src="images/about/project1.png" width="80px" height="auto" alt="projects" class='first' >
+										<img src="images/about/project2.png" width="80px" height="auto" alt="projects">
+										<img src="images/about/project3.png" width="80px" height="auto" alt="projects">
+										<img src="images/about/project1.png" width="80px" height="auto" alt="projects" class='first'>
+										<img src="images/about/project2.png" width="80px" height="auto" alt="projects">
+										<img src="images/about/project3.png" width="80px" height="auto" alt="projects"> 
+										<img src="images/about/project1.png" width="80px" height="auto" alt="projects" class='first'>
+										<img src="images/about/project2.png" width="80px" height="auto" alt="projects">
+										<img src="images/about/project3.png" width="80px" height="auto" alt="projects"> 
+									</div>
+								</span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
@@ -72,7 +85,13 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/about/about.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>If I am not working on the world's next big app 😉, I am most likely spending my time clay sculpting, expanding my palate with new food or training for my next Powerlifting competition.</p>
+								<p>Additional fun facts!</p>
+								<ul>
+									<li>My favorite Marvel Avenger is Dr. Strange</li>
+									<li>I'm allergic to exercisings (cholinergic urticaria)</li>
+									<li>I geek out about mechcanical watch complications</li>
+								</ul>
 							</article>
 
 						<!-- Contact -->
