--- a/index.html
+++ b/index.html
@@ -77,15 +77,26 @@
 										<img src="images/about/project3.png" width="80px" height="auto" alt="projects"> 
 									</div>
 								</span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>This section includes some of the projects im currently working on. <br>Feel free to demo them below!</p>
+
+								<a href="https://heighten-fullstack.herokuapp.com/#/">Heighten</a>
+								<p>This is a clone of the e-commerce website, Fully. With the growing popularity of online shopping, I wanted to have a better understand of the work put into these sites. Additionally, this gave me the opportunity to design something that was fully dynamic and had a responsive UI.</p>
+
+
+								<a href="https://1071919wl.github.io/GalaxyDefender/">GalaxyDefender</a>
+								<p>One of my latest and personal favorite is a space shooter game called Galaxy Defender. This is an updated and redesigned version of Space Invaders. Video games were a big part of my childhood and one of the reasons I chose to become a software engineer. My remake represents a piece of my childhood and the nostalgia it brings me!</p>
+
+
+								<a href="https://tbdeveloped1.herokuapp.com/#/">TBDeveloped</a>
+								<p>I was given the pleasure to work with an amazing team on this MERN stack. TBDeveloped is built using Mongoose, MongoDB, Express.js, Node.js, React, WebRTC, and Socket.io. The idea of this project was to create a website that connected developers with entrepreneur on new ideas via live video and messaging.</p>
+
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/about/about.jpg" alt="" /></span>
-								<p>If I am not working on the world's next big app 😉, I am most likely spending my time clay sculpting, expanding my palate with new food or training for my next Powerlifting competition.</p>
+								<p>When i'm not working on the world's next biggest app 😉, I am spending my time clay sculpting, expanding my palate with new food or training for the next Powerlifting competition. <br>Lets connect if you have similar interests!</p>
 								<p>Additional fun facts!</p>
 								<ul>
 									<li>My favorite Marvel Avenger is Dr. Strange</li>
