correct intro image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/about/intro.jpg" alt="" /></span>
+								<span class="image main"><img src="images/about/intro_sec.jpg" alt="" /></span>
 								<p>Hello,</p>
 								<p>I am a Software Engineer based in San Francisco, Bay Area with a strong growth mindset and passion for learning new languages, frameworks, and technologies. My skills includes but not limited to JavaScript, React, Redux, and Ruby on Rails!</p>
 								<p>In 2016, I graduated from UC Davis which led me to work in finance for two amazing SaaS company. In those 4 year, I did not stop learning. I continued to grow myself personally and professionally and eventually grew a passion for web development! From a simple shopping list to a real-time video and messaging app, my project represents my growth and continued enjoyment for the field.</p>
