fix spelling error

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<p>This section includes some of the projects im currently working on. <br>Feel free to demo them below!</p>
 
 								<a href="https://heighten-fullstack.herokuapp.com/#/">Heighten</a>
-								<p>This is a clone of the e-commerce website, Fully. With the growing popularity of online shopping, I wanted to have a better understand of the work put into these sites. Additionally, this gave me the opportunity to design something that was fully dynamic and had a responsive UI.</p>
+								<p>This is a clone of the e-commerce website, Fully. With the growing popularity of online shopping, I wanted to have a better understanding of the work put into these sites. Additionally, this gave me the opportunity to design something that was fully dynamic and had a responsive UI.</p>
 
 
 								<a href="https://1071919wl.github.io/GalaxyDefender/">GalaxyDefender</a>
@@ -101,7 +101,7 @@
 								<ul>
 									<li>My favorite Marvel Avenger is Dr. Strange</li>
 									<li>I'm allergic to exercisings (cholinergic urticaria)</li>
-									<li>I geek out about mechcanical watch complications</li>
+									<li>I geek out about mechanical watch complications</li>
 								</ul>
 							</article>
 
