--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form action="https://formsubmit.co/22f30b38ca89e134d665968c9cb2edab" method="POST">
+								<!-- <form action="https://formsubmit.co/22f30b38ca89e134d665968c9cb2edab" method="POST">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -127,7 +127,7 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form> -->
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/william-leung-60589a73/" class="fab fa-linkedin-in"></a></li>
 									<!-- <li><a href="#" class="icon brands far fa-envelope"><span class="label">Instagram</span></a></li> -->
