change project description

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<p>This section includes some of the projects im currently working on. <br>Feel free to demo them below!</p>
 
 								<a href="https://heighten-fullstack.herokuapp.com/#/">Heighten</a>
-								<p>This is a clone of the e-commerce website, Fully. With the growing popularity of online shopping, I wanted to have a better understanding of the work put into these sites. Additionally, this gave me the opportunity to design something that was fully dynamic and had a responsive UI.</p>
+								<p>This is a clone of the e-commerce website, Fully. With the growing popularity of online shopping along with our countries current environment, I believe a forward thinking mindset and a plan to adapt for companies is crucial! I built this site with the User in mind to provide a was fully dynamic and responsive UI.</p>
 
 
 								<a href="https://1071919wl.github.io/GalaxyDefender/">GalaxyDefender</a>
