--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<p>This section includes some of the projects im currently working on. <br>Feel free to demo them below!</p>
 
 								<a href="https://heighten-fullstack.herokuapp.com/#/">Heighten</a>
-								<p>This is a clone of the e-commerce website, Fully. With the growing popularity of online shopping along with our countries current environment, a forward thinking mindset and a plan to adapt for companies is crucial! I built this site with the user in mind to provide a was fully dynamic and responsive UI.</p>
+								<p>This is a clone of the e-commerce website, Fully. With the growing popularity of online shopping along with our country's current environment, a forward thinking mindset and a plan to adapt for companies is crucial! I built this site with the user in mind to provide a fully dynamic and responsive UI.</p>
 
 
 								<a href="https://1071919wl.github.io/GalaxyDefender/">GalaxyDefender</a>
