--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/about/about.jpg" alt="" /></span>
 								<p>When i'm not working on the world's next biggest app 😉, I am spending my time clay sculpting, expanding my palate with new food or training for the next Powerlifting competition. <br>Lets connect if you have similar interests!</p>
-								<p>Additional fun facts!</p>
+								<p>Additional fun facts about me!</p>
 								<ul>
 									<li>My favorite Marvel Avenger is Dr. Strange</li>
 									<li>I'm allergic to exercisings (cholinergic urticaria)</li>
